# trafficserver

./: .gitignore  CMakeLists.txt  CMakePresets.json
aviatrix/10_0_0.0001/: avx-gw-trafficserver.service  control  postinst
aviatrix/10_0_0.0001/configs/: logging.yaml  plugin.config  records.yaml
aviatrix/10_0_0.0001/logrotate/: avx-gw-trafficserver
aviatrix/dagger/: Makefile  build.go  build_manifest.sh  builder.sh  go.mod  go.sum  main.go
aviatrix/plugins/: CMakeLists.txt
aviatrix/plugins/avx_certifier/: CMakeLists.txt  README  avx_certifier.cc
aviatrix/plugins/avx_policy_driver/: CMakeLists.txt  Makefile.inc  jsonwriter.h  logging.cc  logging.h  plugin.h  policy.h  policy_client.cc  policy_driver.cc  policy_hit_counter.h  test_client.cc  test_server.cc  unit_test_hitcounter.cc  web_filter.cc  web_filter.h
aviatrix/plugins/avx_policy_driver/rules/: mitm_test.json  no-ids.json  rules1.json
aviatrix/plugins/avx_tee_decrypt/: CMakeLists.txt  plugin.h  tee_decrypt.cc  tee_info.cc  tee_info.h
include/ts/: ts.h
iocore/net/: UnixNetVConnection.cc
mgmt/: RecordsConfig.cc
plugins/authproxy/: authproxy.cc
plugins/esi/lib/: Variables.cc
plugins/esi/test/: vars_test.cc
plugins/s3_auth/: aws_auth_v4.cc
plugins/s3_auth/unit_tests/: test_aws_auth_v4.cc
plugins/stats_over_http/: stats_over_http.c
proxy/hdrs/: HTTP.cc  MIME.cc  MIME.cc.orig
proxy/http/: HttpConfig.cc  HttpSM.cc  HttpSM.cc.orig  HttpTransact.cc  HttpTransact.cc.orig  HttpTransact.h  HttpTunnel.cc
proxy/http/remap/: UrlRewrite.cc
src/api/: InkAPI.cc
